# define_taxonomy

./: .gitignore  README.md  filtered_output_05_08.csv  filtered_output_06_04.csv  filtered_output_06_08.csv  filtered_output_06_09.csv  filtered_output_sim_not_1_04_04.csv  finding_taxonomy.ipynb  papers_to_validate  papers_to_validate.json  plots.py  pyproject.toml  validation.py
data/: openaire_categories_appeared_more_then_10_times.txt  openalex_categories_appeared_more_then_10_times.txt  papers_to_validate_05.json  preprocessed_files.txt  processed_pages_papers.txt  wiki_ai.json  wiki_ai_sub.json  wiki_ml_sub.json  wikidata_ml.json
data/aggregated/: filtered_output_04_04.csv  filtered_output_05_04.csv  filtered_output_06_08.csv  filtered_output_06_09.csv  filtered_output_sim_not_1_02_02.csv  support_per_category.csv
data/initial_collection/: output_1.json  output_2.json  output_3.json  output_4.json
data/legacy/: opeinaire_field_of_science.json  papers_with_code_taxonomy.json  query_ai2.json  query_ml1.json  tax_results.json  (+2 more)
plots/: data  data_flows.drawio  data_structure  method  notes.txt
src/: aggregates_results_from_json.py  check_missing_json_files.py  collect_initial_data.py  download_openaire_data.py  generate_rdf.py  generate_rdf_final.py  generate_rdf_serialized.py  get_all_the_pair_combinations.py  get_data_from_openalex_api.py  get_support_based_on_pairs.py  plots.py  remove_underrepresented_categories.py  run_ne04j_query.py  select_the_best_match_from_category_pairs.py  store_data_into_neo4j.py  transform_result_from_json_to_csv.py  validation.py
(+2085 files in other folders)
