[tool.poetry]
name = "define-taxonomy"
version = "0.1.0"
description = "Poetry virtual environment for define-taxonomy"
authors = [""]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipynb = "^0.5.1"
ipykernel = "^6.29.0"
requests = "^2.31.0"
pandas = "^2.1.4"
bs4 = "^0.0.1"
spacy = "^3.7.4"
unicode = "^2.9"
unidecode = "^1.3.8"
neo4j = "^5.18.0"
plotly = "^5.20.0"
rdflib = "^7.0.0"
filelock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
